Remoção do campo cargo do swagger
